--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,7 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\GaltonBoard.cs" />
+    <Compile Include="Assets\Scripts\GaltonBoard.cs" />
     <Reference Include="UnityEngine">
       <HintPath>D:/Unity/2019.4.10f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
